--- a/app/Resources/views/genus/show.html.twig
+++ b/app/Resources/views/genus/show.html.twig
@@ -1,23 +1,25 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Genus {{ name }}{% endblock %}
+{% block title %}Genus {{ genus.name }}{% endblock %}
 
 {% block body %}
-    <h2 class="genus-name">{{ name }}</h2>
+    <h2 class="genus-name">{{ genus.name }}</h2>
+
     <div class="sea-creature-container">
         <div class="genus-photo"></div>
         <div class="genus-details">
             <dl class="genus-details-list">
                 <dt>Subfamily:</dt>
-                <dd>Octopodinae</dd>
+                <dd>{{ genus.subFamily }}</dd>
                 <dt>Known Species:</dt>
-                <dd>{{ '99999'|number_format }}</dd>
+                <dd>{{ genus.speciesCount|number_format }}</dd>
                 <dt>Fun Fact:</dt>
-                <dd>{{ funFact|raw }}</dd>
+                <dd>{{ genus.funFact }}</dd>
+                <dt>Recent Notes</dt>
+                <dd>{{ recentNoteCount }}</dd>
             </dl>
         </div>
     </div>
-
     <div id="js-notes-wrapper"></div>
 {% endblock %}
 
@@ -29,10 +31,11 @@
 
     <script type="text/babel" src="{{ asset('js/notes.react.js') }}"></script>
     <script type="text/babel">
-        var notesUrl = '{{ path('genus_show_notes', {'genusName': name}) }}';
+        var notesUrl = '{{ path('genus_show_notes', {'name': genus.name}) }}';
+
         ReactDOM.render(
-            <NoteSection url={notesUrl} />,
-            document.getElementById('js-notes-wrapper')
+          <NoteSection url={notesUrl} />,
+          document.getElementById('js-notes-wrapper')
         );
     </script>
 {% endblock %}
